crates/server/src/snapshots/server__definition__tests__definition_base.snap
---
source: crates/server/src/definition.rs
expression: out
---
Err(
    Document(
        IoNotFound(
            Some(
                "Logger",
            ),
        ),
    ),
)
