crates/server/src/snapshots/server__definition__tests__definition_parent_method.snap
---
source: crates/server/src/definition.rs
expression: out
---
Err(
    Document(
        IoNotFound(
            Some(
                "greet",
            ),
        ),
    ),
)
