crates/server/src/snapshots/server__definition__tests__definition_stream_map.snap
---
source: crates/server/src/definition.rs
expression: out
---
Err(
    Document(
        IoNotFound(
            Some(
                "Stream",
            ),
        ),
    ),
)
